assets/scss/_variables_project.scss
/*

Add styles or override variables from the theme here.

*/
$ctx-green: #a0c326;
$ctx-blue: #398FCD;
$ctx-black: rgba(0, 0, 0, 0.7);
$ctx-orange: #ff6600;
$ctx-text-black: #495057;

$primary: #398FCD !default;
$secondary: #ff6600 !default;
$white: #fff !default;
$dark: #252525 !default;

$font-size-base: 1rem !default;

$h1-font-size: $font-size-base * 1.6 !default;
$h2-font-size: $font-size-base * 1.4 !default;
$h3-font-size: $font-size-base * 1.2 !default;
$h4-font-size: $font-size-base * 1.0 !default;
$h5-font-size: $font-size-base * 1.0 !default;
$h6-font-size: $font-size-base !default;

body {
  margin: 0;
  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
  font-size: 0.9rem !important;
  font-weight: 400;
  line-height: 1.5 !important;
  color: $ctx-text-black;
  text-align: left;
  background-color: #fff;

  .popover-body {
    font-size: .9rem;
    padding: 0.5rem 0.75rem;
    color: $ctx-text-black;
  }
  
  .popover.offline-search-result {
    max-width: 460px;
    p {
      margin-right: 12px;
    }
    
    .mt-4 {
      margin-top: 0px !important;
    }
  }

  a.d-block {
    color: $ctx-blue;
    font-size: .9rem !important;
    font-weight: 600;
  }
}

.td-main {
  color: $ctx-black;
  .breadcrumb {
    padding-top: 0.8rem;
    margin-bottom: 0rem;

    .breadcrumb-item {
      padding-left: 0.3rem;

      + .breadcrumb-item::before {
        padding-right: 0.3rem;
      }
    }
  }
  
  .breadcrumb > .breadcrumb-item {
    padding-left: 0px;
  }

  .breadcrumb > .breadcrumb-item ~ .breadcrumb-item{
    padding-left: 3px;
  }

  .slogan {
    font-size: 2rem;
  }
}

.td-content {
  ::before{
    display: block !important;
  }

  color: $ctx-text-black;
  
  h1 {
    font-size: $h1-font-size;
  }
  
  h2 {
    font-size: $h2-font-size;
    font-weight:600 !important;
    margin: 2rem 0rem 0.5rem 0rem !important;
    max-width: 100% !important;
    
  }

  h3 {
    font-size: $h3-font-size;
    font-weight:400 !important;
    margin: 1rem 0rem 0rem 0rem !important;
    padding-bottom: 0.5rem;
  }
 
  h4 {
    font-size: $h4-font-size;
    font-weight:400 !important;
    margin: 1rem 0rem 0.5rem 0rem !important;
  }
  
  p.namespace {
      font-size: 10pt;
      margin-top: -14px;
    }
  
  th {
    color: $ctx-text-black;
  }
  
  td {
    color: $ctx-text-black;
  }
  
  table {  
    th {
      border-top: none !important;
      border-bottom: none !important;
    }

    tbody tr {
      background-color: transparent !important;
    }
  }
  
  .highlight {
    margin: 1rem 0 !important;
    padding: 0;
    max-width: 100% !important;
  }

  figure.block-icon {
    img {
      float: left;
      display: inline;
      margin-right: 10px;
      vertical-align: bottom;
    }
  }
  
  figcaption {
    h4 {
      text-align: center;
      font-size: inherit !important;
      margin: 0 !important;
      font-style: italic;
    }
  }
}

main {
  
  a {
    color: $primary;
  }
  
  .btn {
    a {
      color: $white;
    }
  }
}

.cards {
  .card-container {
    text-align: left;
    margin: 1rem 0rem 1rem 0rem;
    padding: 1rem 1rem 1rem 1rem;
    min-height: 15rem;
    background-color: white;

    .card-icon {
      color: $ctx-blue;
      margin: 0rem 0rem 0rem 0rem;
      font-size: 4rem;
      line-height: 5rem;
    }
    
    .title {
      color: $ctx-text-black;
      font-size: 1.75rem;
      font-weight: 500;
      margin: .5rem 0rem 0.25rem 0rem;
    }
    
    .description {
      color: $ctx-text-black;
      font-size: 1rem;
      font-weight: normal;
      margin-bottom: 0px;
    }
  }
  
  .card-container:hover{
    transform: scale(1.01);
  }
  
  a {
    color: white;
  }
  
  a:hover {
    color: white;
  }
}

footer {
  font-size: 0.8rem !important;
  padding-top: 1rem !important;

  div.copyright-container {
    padding: 1rem;
    border-top: solid 1px #676767;
    color: #676767;
  }
  
  a:hover {
    color: $ctx-green !important;
  }
}



.popover.offline-search-result {
  max-width: 90%;
  p {
    font-size: .9rem;
    color: $ctx-text-black;
    margin-right: 12px;
  }
  .mt-4 {
    margin-top: 0px !important;
  }
}

